--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "./node_modules/.bin/webpack --progress -w"
+    "watch": "./node_modules/.bin/webpack --progress -w",
+    "test": "./node_modules/.bin/jest"
+  },
+  "jest": {
+    "testMatch": [
+      "**/tests/**/*.js?(x)",
+      "**/?(*.)+(spec|test).js?(x)"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +19,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "jest": "^23.6.0",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
