--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "watch": "./node_modules/.bin/webpack --progress -w",
-    "test": "./node_modules/.bin/jest"
+    "test": "./node_modules/.bin/jest",
+    "build": "./node_modules/.bin/webpack --progress",
+    "start": "npm run build && npm test && lite-server"
   },
   "jest": {
     "testMatch": [
@@ -20,6 +22,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "jest": "^23.6.0",
+    "lite-server": "^2.4.0",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
